--- a/nimbus/offsite/templates/offsite_edit.html
+++ b/nimbus/offsite/templates/offsite_edit.html
@@ -21,7 +21,7 @@
             {% include "form.html" %}
 
             <p class="input_submit">
-                <input type="submit" class="submit mid" value="Atualizar" />
+                <button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button>
             </p>
 
         </form>
