--- a/nimbus/system/templates/system_security_copy.html
+++ b/nimbus/system/templates/system_security_copy.html
@@ -19,7 +19,7 @@
         
         <form action="{% url nimbus.system.views.select_storage %}" method="post">
             <p>
-                <input type="submit" class="submit mid" value="Prosseguir" />
+                <button type="submit" class="css3button big positive" value="Prosseguir">Prosseguir</button>
             </p>
         </form>
     
