--- a/nimbus/system/templates/system_select_storage.html
+++ b/nimbus/system/templates/system_select_storage.html
@@ -28,7 +28,7 @@
             <br />
             <input type="hidden" name="localsource" value="True"/>
             
-            <input type="submit" class="submit mid" value="Prosseguir" />
+            <button type="submit" class="css3button positive big" value="Prosseguir">Prosseguir</button>
             {%endif%}
         </form>
     
