--- a/nimbus/system/templates/umount_storage.html
+++ b/nimbus/system/templates/umount_storage.html
@@ -28,7 +28,7 @@
             {% if devices %}
             <br />
             
-            <input type="submit" class="submit mid" value="Prosseguir" />
+            <button type="submit" class="css3button big positive" value="Prosseguir">Prosseguir</button>
             {%endif%}
         </form>
     
