--- a/nimbus/users/templates/password_change.html
+++ b/nimbus/users/templates/password_change.html
@@ -14,7 +14,7 @@
     
         <form method="post" action="">
             {% include "form.html" %}
-            <p><input type="submit" class="submit" value="Confirm" /></p>
+            <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
             <input type="hidden" name="next" value="{{ next }}" />
         </form>
     
