--- a/nimbus/network/templates/myform.html
+++ b/nimbus/network/templates/myform.html
@@ -14,7 +14,7 @@
 
         <form method="post" action="{% url nimbus.network.views.network_conf %}" id="network_config">
             {% include "form.html" %}
-            <p><input type="submit" class="submit" value="Confirm" /></p>
+            <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
         </form>
     
     </div>
