--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -30,10 +30,10 @@
 			<p>
 				<label>{{ field.label }}:</label><br />
 				{% if field.label == 'Schedule' %}
-				<a href="/schedules/add/" id="schedule_button" class="minibutton add_schedule_button"><span>Criar um agendamento</span></a><span id="discard_schedule" class="hidden"> ou <a class="minibutton" onClick="unset_schedule()"><span>Descartar e escolher um perfil</span></a></span>
+				<a href="/schedules/add/" id="schedule_button" class="css3button positive add_schedule_button"><span>Criar um agendamento</span></a><span id="discard_schedule" class="hidden"> ou <a class="minibutton" onClick="unset_schedule()"><span>Descartar e escolher um perfil</span></a></span>
 				{% endif %}
 				{%if field.label == 'Fileset' %}
-				<a href="/filesets/add/" class="filesets minibutton" id="fileset_button"><span>Criar um conjunto de arquivos</span></a><span id="discard_fileset" class="hidden"> ou <a class="minibutton" onClick="unset_fileset()"><span>Descartar e escolher um perfil</span></a></span>
+				<a href="/filesets/add/" class="filesets css3button positive" id="fileset_button"><span>Criar um conjunto de arquivos</span></a><span id="discard_fileset" class="hidden"> ou <a class="minibutton" onClick="unset_fileset()"><span>Descartar e escolher um perfil</span></a></span>
 				{% endif %}
 				{{ field }}
 			</p>
@@ -57,7 +57,7 @@
 				<input type="submit" class="submit" value="Criar" />
 			</p>
 -->
-			<p><button type="submit" value="submit" class="css3button big">Adicionar Backup</button></p>
+			<p><button type="submit" value="submit" class="css3button big positive">Adicionar Backup</button></p>
 		</form>
 		<form action="/schedules/add/" method="POST" id="to_schedule_form"></form>
 	</div>
