--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -16,7 +16,7 @@
 	</div>
     <div class="block_content">
 		<h2 class="floatleft">Conjuntos de arquivos</h2>
-		&nbsp;&nbsp;<a href="/filesets/add/" class="minibutton edit-fileset" id="fileset_new"><span>Novo</span></a>
+		&nbsp;&nbsp;<a href="/filesets/add/" class="css3button positive edit-fileset" id="fileset_new"><span>Novo</span></a>
 		<select class="computer-fileset" id="select_fileset_new">
 			<option value="">a partir do computador:</option>
             {% for computer in computers %}
@@ -40,8 +40,8 @@
                             <option value="{{ computer.id }}">{{ computer.name }}</option>
                             {% endfor %}
                         </select>
-                        <a class="minibutton edit-fileset" id="fileset_{{fileset.id}}" href="/filesets/{{ fileset.id }}/edit/"><span>Editar</span></a>
-                        <a class="minibutton red" href="/filesets/delete/{{fileset.id}}"><span>Excluir</span></a>
+                        <a class="css3button positive edit-fileset" id="fileset_{{fileset.id}}" href="/filesets/{{ fileset.id }}/edit/"><span>Editar</span></a>
+                        <a class="css3button negative" href="/filesets/delete/{{fileset.id}}"><span>Excluir</span></a>
                     </div>
                     <div class="clear"></div>
                 </div><!-- .title -->
@@ -77,7 +77,7 @@
 			{% endfor %}
 		</div><!-- .procedure -->
         
-        <h2 class="floatleft">Agendamentos</h2>&nbsp;<a href="/schedules/add/" class="minibutton edit-schedule"><span>Adicionar</span></a>
+        <h2 class="floatleft">Agendamentos</h2>&nbsp;<a href="/schedules/add/" class="css3button positive edit-schedule"><span>Adicionar</span></a>
 		<div class="clear"></div><hr />
         <!-- real env for schedules -->
 		<div class="schedule">
@@ -88,8 +88,8 @@
     			        <span class="name">{{ schedule.name }}</span>
                     </div>
                     <div class="title-right">
-                        <a class="minibutton edit-schedule" href="/schedules/{{schedule.id}}/edit/"><span>Editar</span></a>
-                        <a class="minibutton red" href="/schedules/delete/{{schedule.id}}"><span>Excluir</span></a>
+                        <a class="css3button positive edit-schedule" href="/schedules/{{schedule.id}}/edit/"><span>Editar</span></a>
+                        <a class="css3button negative" href="/schedules/delete/{{schedule.id}}"><span>Excluir</span></a>
                     </div>
                     <div class="clear"></div>
                 </div><!-- .title -->
