--- a/nimbus/storages/templates/storages_edit.html
+++ b/nimbus/storages/templates/storages_edit.html
@@ -14,7 +14,7 @@
     
         <form method="post" action="">
             {% include "form.html" %}
-            <p><input type="submit" class="submit" value="Confirm" /></p>
+            <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
         </form>
     
     </div>
