--- a/nimbus/system/templates/system_network_tool.html
+++ b/nimbus/system/templates/system_network_tool.html
@@ -20,7 +20,7 @@
             <p>
                 <label for="ip">IP ou domínio:</label><br/>
                 <input type="text" name="ip" value="" class="text small" id="ip" />
-                <input type="submit" class="submit" value="Executar" />
+                <button type="submit" class="css3button big positive" value="Executar">Executar</button>
                 <input type="hidden" name="type" value="{{type}}" id="type" />
             </p>
         </form>
