--- a/nimbus/timezone/templates/timezoneconf.html
+++ b/nimbus/timezone/templates/timezoneconf.html
@@ -20,7 +20,7 @@
         <form method="post" action="">
             {% include "form.html" %}
 			<input type="hidden" value="{% url nimbus.timezone.views.area_request %}" id="area_request" name="area"/>
-            <p><input type="submit" class="submit" value="Confirm" /></p>
+            <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
         </form>
     
     </div>
