FIX: Realocação do botão reconfigurar para computadores e finalização dos estilos de botões.

--- a/nimbus/computers/templates/computers_add.html
+++ b/nimbus/computers/templates/computers_add.html
@@ -35,7 +35,7 @@
                 <div class="right">
                     <div class="floatright">
                         <a href="/computers/{{comp.id}}/activate/" class="css3button positive big">Ativar</a>
-                        <a href="/computers/{{comp.id}}/configure/" class="css3button positive big">Reconfigurar</a>
+<!--                         <a href="/computers/{{comp.id}}/configure/" class="css3button positive big">Reconfigurar</a> -->
 {#                        <form action="/computers/{{comp.id}}/activate/" method="post" class="floatright">#}
 {#                            <button type="submit" class="css3button positive" value="Ativar">Ativar</button>#}
 {#                        </form>#}
