FIX: Logo do nimbus open source na tela de login.

--- a/nimbus/session/templates/login.html
+++ b/nimbus/session/templates/login.html
@@ -25,7 +25,7 @@
             <input type="checkbox" class="checkbox" checked="checked" id="rememberme" /> <label for="rememberme">Manter minha sessão ativa</label>
         </p>
         <p class="set-right">
-            <input type="submit" class="submit" value="Acessar" /> &nbsp;
+            <button type="submit" class="css3button big positive" value="Acessar">Acessar</button> &nbsp;
         </p>
 
         <input type="hidden" name="next" value="{{ next }}" />
