--- a/nimbus/base/templates/base_login.html
+++ b/nimbus/base/templates/base_login.html
@@ -14,6 +14,7 @@
 		@import url("/media/lib/css/facebox.css");
 		@import url("/media/lib/css/visualize.css");
 		@import url("/media/lib/css/date_input.css");
+		@import url("/media/lib/css/css3buttons.css");
     </style>
 	
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
@@ -48,7 +49,7 @@
 	
 		<div class="wrapper">		<!-- wrapper begins -->
 		    
-		    <div class="logo_center"><img src="/media/images/nimbus_logo_professional.png" /></div>
+		    <div class="logo_center"><img src="/media/images/nimbus_logo_opensource.png" /></div>
 		    
 			
 			<div class="block small center login">
