FIX: Botões e logo do wizard e templates do fileset

--- a/nimbus/base/templates/base_wizard.html
+++ b/nimbus/base/templates/base_wizard.html
@@ -17,6 +17,7 @@
 		@import url("/media/lib/css/uniform.default.css");
 		@import url("/media/js/iphone-style-checkboxes/style.css");
 		@import url("/media/js/progressbar/jquery.ui.all.css");
+		@import url("/media/lib/css/css3buttons.css");
 
 		#id_country { width: 400px; }
 		#id_area { width: 300px; }
@@ -69,7 +70,7 @@
 
 		<div class="wrapper">		<!-- wrapper begins -->
 
-		    <div class="logo_center"><img src="/media/images/nimbus_logo.png" /></div>
+		    <div class="logo_center"><img src="/media/images/nimbus_logo_opensource.png" /></div>
 
 			<div class="block small center login {{wide}}">
 
