--- a/nimbus/computers/templates/base_computers.html
+++ b/nimbus/computers/templates/base_computers.html
@@ -35,10 +35,11 @@
             <a href="#" id="add_group">Adicionar grupo</a>
             <div class="add_group">
                 <label>Nome do grupo:</label>
-                <input type="text" name="group" value="" class="text small" id="add_group_name" /> <input type="submit" class="submit" value="Adicionar" id="add_group_submit" /> ou <a href="#" id="add_group_cancel">Cancelar</a>
+                <input type="text" name="group" value="" class="text small" id="add_group_name" /> 
+                <button type="submit" class="css3button positive" value="Adicionar" id="add_group_submit">Adicionar Grupo</button> ou <a href="#" class="" id="add_group_cancel">Cancelar</a>
             </div>
             <br/>
-            <p><input type="submit" class="submit" value="Atualizar" /></p>
+            <p><button type="submit" class="css3button positive big" value="Atualizar">Atualizar</button></p>
         </form>
     
     </div>
