--- a/nimbus/filesets/templates/add_fileset.html
+++ b/nimbus/filesets/templates/add_fileset.html
@@ -30,7 +30,7 @@
 			</p>
             <hr />
 			<p>
-                <button type="button" class="css3button big" id="submit_button" value="Salvar">Salvar</button>
+                <button type="button" class="css3button positive big" id="submit_button" value="Salvar">Salvar</button>
             </p>
         </form>
 	</div>		<!-- .block_content ends -->
