--- a/nimbus/filesets/templates/base_filesets.html
+++ b/nimbus/filesets/templates/base_filesets.html
@@ -64,7 +64,7 @@ select.style-select {
             </p>
             <p></p>
             <p>
-                <input type="submit" class="submit mid" value="Salvar" />
+                <button type="submit" class="css3button big positive" value="Salvar">Salvar</button>
             </p>
         </form>
 
