--- a/nimbus/filesets/templates/edit_fileset.html
+++ b/nimbus/filesets/templates/edit_fileset.html
@@ -39,7 +39,7 @@
 			<hr />
 			<p>
 				<!-- <input type="submit" class="submit mid" id="submit_button" value="Salvar"/> -->
-                <input type="button" class="submit mid" id="submit_button" value="Salvar"/>
+                <button type="button" class="css3button" id="submit_button" value="Salvar">Salvar</button>
             </p>
         </form>
 	</div>		<!-- .block_content ends -->
