--- a/nimbus/wizard/templates/license.html
+++ b/nimbus/wizard/templates/license.html
@@ -718,7 +718,7 @@
             {% if previous %}
             <a href="{{ previous }}" class="submit left"><span>Anterior</span></a> &nbsp;
             {% endif %}
-            <input type="submit" class="submit right mid" value="Concordo" />
+            <button type="submit" class="css3button big positive floatright" value="Concordo">Concordo</button>
         </p>
                
         <input type="hidden" name="next" value="{{ next }}" />
