--- a/nimbus/wizard/templates/generic.html
+++ b/nimbus/wizard/templates/generic.html
@@ -46,10 +46,10 @@
 
         <p class="input_submit">
             {% if previous %}
-            <a href="{{ previous }}" class="submit left"><span>Anterior</span></a> &nbsp;
+            <a href="{{ previous }}" class="css3button positive big floatleft">Anterior</a> &nbsp;
             {% endif %}
 
-            <input type="submit" class="submit right no_margin" value="Próximo" />
+            <button type="submit" class="css3button big positive floatright" value="Próximo">Próximo</button>
         </p>
 
         <input type="hidden" name="next" value="{{ next }}" />
