--- a/nimbus/timezone/templates/timezoneconf.html
+++ b/nimbus/timezone/templates/timezoneconf.html
@@ -17,9 +17,9 @@
 
     <div class="block_content">
     
-        <form method="post" action="">
+        <form method="post" action="/timezone/config/">
             {% include "form.html" %}
-			<input type="hidden" value="{% url nimbus.timezone.views.area_request %}" id="area_request" name="area"/>
+<!-- 			<input type="hidden" value="{% url nimbus.timezone.views.area_request %}" id="area_request" name="area"/> -->
             <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
         </form>
     
