FIX: Escala do gráfico fixa em gigabytes.

--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -132,7 +132,7 @@
     				<button type="button" class="css3button big positive" id="buscar_arquivos" value="Buscar">Buscar</button>
     			</p>
 
-                <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
+                <ul class="tree"><li class="directory first"><span><a href="#" path="">Arquivos</a></span></li></ul>
                 
                 <div class="clear"></div><hr />
                 <a href="#" class="css3button positive open_step_4"><span>Selecionar local para restauração</span></a>
