--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -18,7 +18,7 @@
 	</div>
 
     <div class="block_content">
-        <form action="/restore/restore_files" method="post">
+        <form action="/restore/restore_files" id="restore_form" method="post">
             <input id="url_tree" name="url" value="{% url nimbus.restore.views.get_tree_search_file %}" type="hidden"/>
             {% if computer %}
                 <p><a href="/computers/list">Listar todos os computadores</a></p>
@@ -132,7 +132,7 @@
     				<button type="button" class="css3button big positive" id="buscar_arquivos" value="Buscar">Buscar</button>
     			</p>
 
-                <ul class="tree"><li class="directory first"><span><a href="#" path="">Arquivos</a></span></li></ul>
+                <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
                 
                 <div class="clear"></div><hr />
                 <a href="#" class="css3button positive open_step_4"><span>Selecionar local para restauração</span></a>
@@ -143,7 +143,7 @@
                 <ul class="tree_computer"><li class="directory first"><span><a href="#" path="/">Selecione o local para restauração</a></span></li></ul>
                 
     		    <p>
-                    <button type="submit" class="css3button big positive" value="Restaurar">Restaurar Arquivos</button>
+                    <button type="submit" class="css3button big positive" value="Restaurar Arquivos">Restaurar Arquivos</button>
                 </p>
                 <div class="clear"></div>
             </div>
